--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.mariadb.jdbc:mariadb-java-client'
+
+	/*implementation 'org.mariadb.jdbc:mariadb-java-client'*/
 }
 
 tasks.named('test') {
