--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'
 	/*implementation 'org.mariadb.jdbc:mariadb-java-client'*/
 }
 
