--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,10 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 10MB
+      max-request-size: 10MB
+      location: C:\\KIT\\2022-1\\Capstone\\image
