--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ logging:
   level:
     root: info
 spring:
+  mvc:
+    static-path-pattern: /webapp/**
   output:
     ansi:
       enabled: always
